python/src/gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-pod #used to select what pod-names to forward requests to.
  type: ClusterIP
  ports:
    - port: 8081 #receives here
      targetPort: 8080 #forwards requests to this port.
      protocol: TCP
